--- a/pages/projects.html
+++ b/pages/projects.html
@@ -7,8 +7,7 @@
 	<title>Projects</title>
 </head>
 <body>
-
-	<nav class="bg-gray-700 flex items-center justify-between text-yellow-400">
+<nav class="bg-gray-700 flex items-center justify-between text-yellow-400">
 		
 		<div class="font-bold space-x-10 w-full block py-6 pr-8 flex-grow lg:flex lg:items-center lg:w-auto"">
 			<div class="flex-grow">	
@@ -70,7 +69,7 @@
 				Translate your sentence into the voice of Minions.The English message will convert to banana lanague.If you fan of Minions ,you love this.
 			</p>
 			<div class="pb-4 space-x-5 text-base">
-				<a class="text-white px-2 rounded-md py-2 bg-blue-500"ref="https://quiet-bienenstitch-48751f.netlify.app">
+				<a class="text-white px-2 rounded-md py-2 bg-blue-500"href="https://quiet-bienenstitch-48751f.netlify.app">
 				Try-Translator
 			</a>
 			<a class="text-red-600" href="https://github.com/belwalshubham/Banana-Speak">
