add work experience and minor cleanups

--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
 				Famlier with web technologies
 			</h1>
 		<p class="text-base pt-2 pb-4">
-			I'm familier with HTML5,CSS Javascript,PHP,Laravel,React,Vuejs.
+			I'm familier with HTML5, CSS, TailwindCSS, Javascript, PHP, Laravel, Vue3, NestJs.
+		</p>
+		<p class="text-base pb-2">
+			Tools - Git, GitHub, VSCODE, Postman, Sentry(Error monitoring tool), K6(load testing)
 		</p>
 	</div>
         </section>
@@ -49,9 +52,10 @@
 				Projects
 			</h1>
 		<p class="text-base pt-2">
-			I like to showcase my work and thus, you can see my all projects online.
+			I like to showcase my work and thus, you can see my work experience and all my projects online.
 			<div class="py-4">
 				<a class="text-white px-2 rounded-md py-2 bg-blue-500" href="pages/projects.html">Browse Projects</a>
+				<a class="text-white ml-4 px-2 rounded-md py-2 bg-blue-500" href="pages/work-experience.html">Work Experience</a>
 			</p>
 	</div>
 	</div>
