--- a/pages/work-experience.html
+++ b/pages/work-experience.html
@@ -40,7 +40,7 @@
 					3) Any roadblocks for me?
 			</p>
 			<div class="pb-4 space-x-5 text-base">
-				<a class="text-white my-2 px-2 rounded-md py-2 bg-blue-500" href="https://github.com/belwalshubham/QUIZ-GAME">
+				<a class="text-white my-2 px-2 rounded-md py-2 bg-blue-500" href="https://github.com/belwalshubham">
 		         Github link
 			</a>
 			</div>
