--- a/pages/work-experience.html
+++ b/pages/work-experience.html
@@ -51,7 +51,8 @@
 			<h1 class="font-bold text-lg p-2 text-black">	Worked on company employee portal 
 			</h1>
 			<p class="text-base pb-4">
-      <p class=""> Worked on several core functionalities and building CRUD operations end-to-end for modules like HR, Library, etc.
+      <p class="">A hub-and-spoke platform for organizations to effectively manage their operations and data.
+		<p class="">Worked on several core functionalities and building CRUD operations end-to-end for modules like HR, Library, etc.</p> 
 			</p>
 			<p class="">Integrated email functionality and using custom email templates for dynamic email content</p>
 			<p class="">Team size: 15-20</p>
@@ -68,7 +69,7 @@
 		</section>
 		<section>
 			<div class="text-center mt-8  background bg-pink-50">
-			<h1 class="font-bold pt-2 text-lg  text-black">	Worked on Real world project Wisdom Circle
+			<h1 class="font-bold pt-2 text-lg  text-black"> Worked on a fully mobile responsive web-app for recruiters and Wisdom generation applicants for work opportunities – WISDOM CIRCLE
 			</h1>
 			<p class="text-base pb-4">
       <p class=""> Wisdom Circle is a global platform that connects retired professionals to relevant, meaningful engagements. These retired professionals, typically above 50, have accumulated wisdom & skills over a lifetime of experience.
